Added auto Verstion

--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -11,7 +11,7 @@ jobs:
       id: version   
       uses: jLynx/Bump-N-Tag-Version@master
       with:
-        file_name: 'esp_duck/config.h'
+        file_name: 'esp_duck/version.h'
         tag_version: "false"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
