--- a/.github/ISSUE_TEMPLATE/6--test.yaml
+++ b/.github/ISSUE_TEMPLATE/6--test.yaml
@@ -2,7 +2,7 @@
   attributes:
     label: Operating System
     description: What operating system are you using?
-    placeholder: Example: macOS Big Sur
+    placeholder: "Example: macOS Big Sur"
     value: operating system
   validations:
     required: true
