--- a/.github/ISSUE_TEMPLATE/4--bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/4--bug-report.yaml
@@ -8,7 +8,7 @@ body:
     attributes:
       label: Describe the bug
       description: A clear and concise description of what the bug is.
-      placeholder: #
+      placeholder: Doing X leads to a crash when Y is enabled...
     validations:
       required: true
   - type: textarea
@@ -16,7 +16,11 @@ body:
     attributes:
       label: Steps to reproduce
       description: Tell us how we can reproduce the behavior
-      placeholder: #
+      placeholder: |
+        1. Go to ...
+        2. Click on ....
+        3. Scroll down to ....
+        4. See error
       value: #
     validations:
       required: true
@@ -33,7 +37,7 @@ body:
     attributes:
       label: Additional context
       description: Tell us more if needed. Feel free to attach pictures of screenshots. 
-      placeholder: #
+      placeholder: I think this might be caused by ...
       value: #
     validations:
       required: false
