--- a/.github/ISSUE_TEMPLATE/3--feature-request.yaml
+++ b/.github/ISSUE_TEMPLATE/3--feature-request.yaml
@@ -6,7 +6,7 @@ body:
   - type: checkboxes
     attributes:
       label: Is there an existing issue for this?
-      description: Please search to see if an issue already exists for the bug you encountered.
+      description: Please search to see if an issue already exists for your feature.
       options:
       - label: I have searched the existing issues
         required: true
